--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,13 @@
     <div class="landing-page">
         <div class="content-wrapper">
             <h2>Welcome to Our Application</h2>
+            <p>
+                Our application provides a comprehensive solution for managing customer data efficiently. 
+                Whether you need to view, edit, or search for customer information, our system makes it easy and intuitive.
+            </p>
+            <p>
+                With our user-friendly interface, you can quickly navigate through various features such as customer management, syncing data from external APIs, and much more.
+            </p>
             <div class="button-group">
                 <button id="loginButton" class="btn-landing">LOGIN</button>
                 <button id="signupButton" class="btn-landing">SIGN UP</button>
