--- a/Frontend/customerlist.html
+++ b/Frontend/customerlist.html
@@ -27,7 +27,7 @@
         <!-- Dropdown Button -->
         <div class="dropdown">
           <button type="button" class="btn-dropdown">
-            Search By
+            Select
             <i
               id="dropdownButton"
               class="fas fa-chevron-down dropdown-icon"
@@ -68,6 +68,16 @@
         <!-- Sync Button -->
         <button id="syncButton" class="btn-sync">Sync</button>
         
+        <!-- Sorting Buttons -->
+        <div class="sort-container">
+          <button type="button" class="sort-button" id="sortAscButton">
+              <i class="fas fa-sort-amount-up"></i> Sort
+          </button>
+          <button type="button" class="sort-button" id="sortDescButton">
+              <i class="fas fa-sort-amount-down"></i> Sort
+          </button>
+        </div>
+
         <!-- Logout Button -->
         <button id="logoutButton" class="btn-logout">Logout</button>
       </div>
